@@ -1,6 +1,6 @@
 dnl Functions for libcrypto
 dnl
-dnl Version: 20130831
+dnl Version: 20141225
 
 dnl Function to detect whether openssl/evp.h can be used in combination with zlib.h
 AC_DEFUN([AX_LIBCRYPTO_CHECK_OPENSSL_EVP_ZLIB_COMPATIBILE],
@@ -107,6 +107,23 @@ AC_DEFUN([AX_LIBCRYPTO_CHECK_OPENSSL_EVP_SHA1],
   ])
  ])
 
+dnl Function to detect if openssl EVP SHA224 functions are available
+AC_DEFUN([AX_LIBCRYPTO_CHECK_OPENSSL_EVP_SHA224],
+ [AC_CHECK_LIB(
+  crypto,
+  EVP_sha224,
+  [ac_cv_libcrypto_sha224=libcrypto_evp],
+  [ac_cv_libcrypto_sha224=no])
+
+ AS_IF(
+  [test "x$ac_cv_libcrypto_sha224" = xlibcrypto_evp],
+  [AC_DEFINE(
+   [HAVE_EVP_SHA224],
+   [1],
+   [Define to 1 if you have the `EVP_sha224' function".])
+  ])
+ ])
+
 dnl Function to detect if openssl EVP SHA256 functions are available
 AC_DEFUN([AX_LIBCRYPTO_CHECK_OPENSSL_EVP_SHA256],
  [AC_CHECK_LIB(
@@ -200,6 +217,37 @@ AC_DEFUN([AX_LIBCRYPTO_CHECK_OPENSSL_SHA1],
 
  AS_IF(
   [test "x$ac_cv_libcrypto" = xno && test "x$ac_cv_libcrypto_sha1" = xlibcrypto],
+  [ac_cv_libcrypto=yes])
+ ])
+
+dnl Function to detect if openssl SHA224 functions are available
+AC_DEFUN([AX_LIBCRYPTO_CHECK_OPENSSL_SHA224],
+ [AC_CHECK_HEADERS([openssl/sha.h])
+
+ AS_IF(
+  [test "x$ac_cv_header_openssl_sha_h" = xno],
+  [ac_cv_libcrypto_sha224=no],
+  [ac_cv_libcrypto_sha224=libcrypto
+
+  AC_CHECK_LIB(
+   crypto,
+   SHA224_Init,
+   [ac_cv_libcrypto_dummy=yes],
+   [ac_cv_libcrypto_sha224=no])
+  AC_CHECK_LIB(
+   crypto,
+   SHA224_Update,
+   [ac_cv_libcrypto_dummy=yes],
+   [ac_cv_libcrypto_sha224=no])
+  AC_CHECK_LIB(
+   crypto,
+   SHA224_Final,
+   [ac_cv_libcrypto_dummy=yes],
+   [ac_cv_libcrypto_sha224=no])
+  ])
+
+ AS_IF(
+  [test "x$ac_cv_libcrypto" = xno && test "x$ac_cv_libcrypto_sha224" = xlibcrypto],
   [ac_cv_libcrypto=yes])
  ])
 
@@ -442,7 +490,7 @@ AC_DEFUN([AX_LIBCRYPTO_CHECK_SHA1],
 
  dnl Check for libcrypto (openssl) EVP MD support
  AS_IF(
-  [test "x$ac_cv_libcrypto_evp" = xyes && test "x$ac_cv_libcrypto_evp_md" != xyes],
+  [test "x$ac_cv_libcrypto_evp" = xyes && test "x$ac_cv_enable_openssl_evp_md" != xno && test "x$ac_cv_libcrypto_evp_md" != xyes],
   [AX_LIBCRYPTO_CHECK_OPENSSL_EVP_MD])
 
  dnl Check for libcrypto (openssl) EVP SHA1 support
@@ -456,13 +504,33 @@ AC_DEFUN([AX_LIBCRYPTO_CHECK_SHA1],
   [AX_LIBCRYPTO_CHECK_OPENSSL_SHA1])
  ])
 
+dnl Function to detect if libcrypto SHA224 functions are available
+AC_DEFUN([AX_LIBCRYPTO_CHECK_SHA224],
+ [ac_cv_libcrypto_sha224=no
+
+ dnl Check for libcrypto (openssl) EVP MD support
+ AS_IF(
+  [test "x$ac_cv_libcrypto_evp" = xyes && test "x$ac_cv_enable_openssl_evp_md" != xno && test "x$ac_cv_libcrypto_evp_md" != xyes],
+  [AX_LIBCRYPTO_CHECK_OPENSSL_EVP_MD])
+
+ dnl Check for libcrypto (openssl) EVP SHA224 support
+ AS_IF(
+  [test "x$ac_cv_libcrypto_evp_md" = xyes],
+  [AX_LIBCRYPTO_CHECK_OPENSSL_EVP_SHA224])
+
+ dnl Check for libcrypto (openssl) SHA224 support
+ AS_IF(
+  [test "x$ac_cv_libcrypto_sha224" = xno],
+  [AX_LIBCRYPTO_CHECK_OPENSSL_SHA224])
+ ])
+
 dnl Function to detect if libcrypto SHA256 functions are available
 AC_DEFUN([AX_LIBCRYPTO_CHECK_SHA256],
  [ac_cv_libcrypto_sha256=no
 
  dnl Check for libcrypto (openssl) EVP MD support
  AS_IF(
-  [test "x$ac_cv_libcrypto_evp" = xyes && test "x$ac_cv_libcrypto_evp_md" != xyes],
+  [test "x$ac_cv_libcrypto_evp" = xyes && test "x$ac_cv_enable_openssl_evp_md" != xno && test "x$ac_cv_libcrypto_evp_md" != xyes],
   [AX_LIBCRYPTO_CHECK_OPENSSL_EVP_MD])
 
  dnl Check for libcrypto (openssl) EVP SHA256 support
@@ -482,7 +550,7 @@ AC_DEFUN([AX_LIBCRYPTO_CHECK_SHA512],
 
  dnl Check for libcrypto (openssl) EVP MD support
  AS_IF(
-  [test "x$ac_cv_libcrypto_evp" = xyes && test "x$ac_cv_libcrypto_evp_md" != xyes],
+  [test "x$ac_cv_libcrypto_evp" = xyes && test "x$ac_cv_enable_openssl_evp_md" != xno && test "x$ac_cv_libcrypto_evp_md" != xyes],
   [AX_LIBCRYPTO_CHECK_OPENSSL_EVP_MD])
 
  dnl Check for libcrypto (openssl) EVP SHA512 support
@@ -500,9 +568,9 @@ dnl Function to detect if libcrypto AES functions are available
 AC_DEFUN([AX_LIBCRYPTO_CHECK_AES],
  [ac_cv_libcrypto_aes=no
 
- dnl Check for libcrypto (openssl) EVP MD support
+ dnl Check for libcrypto (openssl) EVP CIPHER support
  AS_IF(
-  [test "x$ac_cv_libcrypto_evp" = xyes && test "x$ac_cv_libcrypto_evp_cipher" != xyes],
+  [test "x$ac_cv_libcrypto_evp" = xyes && test "x$ac_cv_enable_openssl_evp_cipher" != xno && test "x$ac_cv_libcrypto_evp_cipher" != xyes],
   [AX_LIBCRYPTO_CHECK_OPENSSL_EVP_CIPHER
 
   AS_IF(
@@ -524,6 +592,18 @@ AC_DEFUN([AX_LIBCRYPTO_CHECK_ENABLE],
   [search for openssl in includedir and libdir or in the specified DIR, or no if not to use openssl],
   [auto-detect],
   [DIR])
+
+ AX_COMMON_ARG_ENABLE(
+  [openssl-evp-cipher],
+  [openssl_evp_cipher],
+  [enable openssl EVP CIPHER support if available],
+  [auto-detect])
+
+ AX_COMMON_ARG_ENABLE(
+  [openssl-evp-md],
+  [openssl_evp_md],
+  [enable openssl EVP MD support if available],
+  [auto-detect])
 
  dnl Check for a shared library version
  AX_LIBCRYPTO_CHECK_LIB
